created story maps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="sign_in_question">Already have an account?</string>
     <string name="sign_in">Sign In</string>
     <string name="password_must_same">Password must same</string>
+    <string name="maps">Maps</string>
+    <string name="title_activity_maps">Story Maps</string>
 </resources>
