--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="password_must_same">Password must same</string>
     <string name="maps">Maps</string>
     <string name="title_activity_maps">Story Maps</string>
+    <string name="retry">Retry</string>
 </resources>
