--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="maps">Maps</string>
     <string name="title_activity_maps">Story Maps</string>
     <string name="retry">Retry</string>
+    <string name="empty">Sorry Story Has Empty</string>
 </resources>
